# elasticIsoLib_3D

./: .gitignore  .gitmodules  LICENSE  README.md
elastic_iso_lib_3d/: CMakeLists.txt
elastic_iso_lib_3d/elastic_iso_double/: CMakeLists.txt
elastic_iso_lib_3d/elastic_iso_double/include/: BornElasticGpuFunctions_3D.h  BornElasticGpu_3D.h  BornElasticShotsGpu_3D.h  fdParamElastic_3D.h  nonlinearPropElasticGpuFunctions_3D.h  nonlinearPropElasticGpu_3D.h  nonlinearPropElasticShotsGpu_3D.h  operator.h  seismicElasticOperator3D.cpp  seismicElasticOperator3D.h  spaceInterpGpu_3D.h  stagger_3D.h  varElaDeclare_3D.h
elastic_iso_lib_3d/elastic_iso_double/src/: ._kernelsElaGpu_3D.cu  BornElasticGpuFunctions_3D.cu  BornElasticGpu_3D.cpp  BornElasticShotsGpu_3D.cpp  fdParamElastic_3D.cpp  kernelsAcoGpu_3D.cu  kernelsElaGpu_3D.cu  kernelsElaGpudomDec_3D.cu  nonlinearPropElasticGpuFunctions_3D.cu  nonlinearPropElasticGpu_3D.cpp  nonlinearPropElasticShotsGpu_3D.cpp  spaceInterpGpu_3D.cpp  stagger_3D.cpp
elastic_iso_lib_3d/elastic_iso_float/: CMakeLists.txt
elastic_iso_lib_3d/elastic_iso_float/include/: BornElasticGpuFunctions_3D.h  BornElasticGpu_3D.h  BornElasticShotsGpu_3D.h  fdParamElastic_3D.h  nonlinearPropElasticGpuFunctions_3D.h  nonlinearPropElasticGpu_3D.h  nonlinearPropElasticShotsGpu_3D.h  operator.h  seismicElasticOperator3D.cpp  seismicElasticOperator3D.h  spaceInterpGpu_3D.h  stagger_3D.h  varElaDeclare_3D.h
elastic_iso_lib_3d/elastic_iso_float/src/: BornElasticGpuFunctions_3D.cu  BornElasticGpu_3D.cpp  BornElasticShotsGpu_3D.cpp  fdParamElastic_3D.cpp  kernelsElaGpu_3D.cu  kernelsElaGpudomDec_3D.cu  nonlinearPropElasticGpuFunctions_3D.cu  nonlinearPropElasticGpu_3D.cpp  nonlinearPropElasticShotsGpu_3D.cpp  padElasticFileGpuMain_3D.cpp  spaceInterpGpu_3D.cpp  stagger_3D.cpp
elastic_iso_lib_3d/python/python_double/: BornPythonDoubleMain_3D.py  CMakeLists.txt  Elastic_iso_double_3D.py  nonlinearPythonDoubleMain_3D.py  pyElastic_iso_double_born_3D.cpp  pyElastic_iso_double_nl_3D.cpp
elastic_iso_lib_3d/python/python_float/: BornPythonFloatMain_3D.py  CMakeLists.txt  Elastic_iso_float_3D.py  efwiMain_3D.py  inversionUtils_3D.py  nonlinearPythonFloatMain_3D.py  pyElastic_iso_float_born_3D.cpp  pyElastic_iso_float_nl_3D.cpp
elastic_iso_lib_3d/seis_utils/python/: CMakeLists.txt  dataCompMain_3D.py  dataCompModule_3D.py  elasticParamConvertModule_3D.py  generateGeom.py
